syntax = "proto3";
package archway.rewards.v1beta1;

option go_package = "github.com/archway-network/archway/x/rewards/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "archway/rewards/v1beta1/rewards.proto";

// Query service for the tracking module.
service Query {
  // Params returns module parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/archway/rewards/v1/params";
  }

  // ContractMetadata returns the contract rewards parameters (metadata).
  rpc ContractMetadata(QueryContractMetadataRequest) returns (QueryContractMetadataResponse) {
    option (google.api.http).get = "/archway/rewards/v1/contract_metadata";
  }
}

// QueryParamsRequest is the request for Query.Params.
message QueryParamsRequest {}

// QueryParamsResponse is the response for Query.Params.
message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.nullable) = false
  ];
}

// QueryContractMetadataRequest is the request for Query.ContractMetadata.
message QueryContractMetadataRequest {
  // contract_address is the contract address (bech32 encoded).
  string contract_address = 1;
}

// QueryContractMetadataResponse is the response for Query.ContractMetadata.
message QueryContractMetadataResponse {
  ContractMetadata metadata = 1 [
    (gogoproto.nullable) = false
  ];
}
